--- a/src/galleryEl/imageGallery.module.scss
+++ b/src/galleryEl/imageGallery.module.scss
@@ -23,8 +23,9 @@
     width: 100%;
     height: 100px;
     box-sizing: border-box;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
     opacity: 0;
-    transition: opacity 0.3s, transform 0.5s 0.1s;
+    transition: opacity 0.5s, transform 0.5s;
   }
   &__img {
     max-height: 300px;
@@ -32,9 +33,14 @@
   }
   &:hover &__infoContainer {
     opacity: 1;
-    transition: opacity 0.5s 0.3s, transform 0.5s;
+    transition: all 0.5s;
     padding: 0 25px 0 25px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
+    // background: rgba(0, 0, 0, 0.8);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
+    // box-shadow: inset 25px 25px 40px 100px rgba(0, 0, 0, 0.16),
+    // inset 0 0 40px 40px rgba(0, 0, 0, 0.16);
+    // background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
+    // background: linear-gradient(#e66465, #9198e5);
   }
   &__lineInfo {
     height: 20px;
