--- a/src/searchbar/searchbar.module.scss
+++ b/src/searchbar/searchbar.module.scss
@@ -44,7 +44,8 @@
     top: -14px;
     list-style: none;
     background-color: #fff;
-    outline: 1px solid rgb(243, 237, 237);
+    color: #000;
+    border: 1px solid rgb(243, 237, 237);
     border-radius: 10px;
     width: 150px;
   }
@@ -56,6 +57,7 @@
     color: rgb(218, 216, 216);
     height: 50px;
     display: flex;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
     padding-right: 13px;
@@ -68,6 +70,7 @@
     position: absolute;
     background-color: #fff;
     height: 50px;
+    color: #000;
     width: 150px;
     border-radius: 10px;
     right: 0;
