--- a/src/videoGalleryEl/videoGalleryEl.module.scss
+++ b/src/videoGalleryEl/videoGalleryEl.module.scss
@@ -3,7 +3,10 @@
   //   height: 300px;
   //   position: fixed;
   //   position: absolute;
-  height: 100%;
-  max-height: 300px;
+
+  height: 300px;
   width: 100%;
+  @media all and (max-width: 600px) {
+    height: 100%;
+  }
 }
