--- a/src/galleryEl/imageGallery.module.scss
+++ b/src/galleryEl/imageGallery.module.scss
@@ -2,17 +2,16 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  // width: 640px;
-  // width: 100%;
-  // max-height: 300px;
-  // padding: 0;
   align-items: center;
   position: relative;
-  max-height: 300px;
+  min-height: 170px;
+  min-width: 300px;
+  max-width: 500px;
   margin: 0 10px 10px 0;
   @media all and (max-width: 600px) {
     margin-right: 0;
   }
+
   &__infoContainer {
     position: absolute;
     display: flex;
@@ -35,12 +34,7 @@
     opacity: 1;
     transition: all 0.5s;
     padding: 0 25px 0 25px;
-    // background: rgba(0, 0, 0, 0.8);
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
-    // box-shadow: inset 25px 25px 40px 100px rgba(0, 0, 0, 0.16),
-    // inset 0 0 40px 40px rgba(0, 0, 0, 0.16);
-    // background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
-    // background: linear-gradient(#e66465, #9198e5);
   }
   &__lineInfo {
     height: 20px;
@@ -111,120 +105,18 @@
   }
 }
 
-// .galleryItem {
-//   // list-style: none;
-//   // display: flex;
-//   // flex-direction: column;
-//   // // width: 640px;
-//   // // width: 100%;
-//   // // max-height: 300px;
-//   // padding: 0;
-//   // align-items: center;
-//   // position: relative;
-//   // margin: 0 10px 10px 0;
-
-//   &__infoContainer {
-//     // position: absolute;
-//     // display: flex;
-//     // padding: 0 25px 0 25px;
-//     // justify-content: center;
-//     // // transition: 2s;
-//     // align-items: center;
-//     // bottom: 0px;
-//     // // background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
-//     // width: 100%;
-//     // height: 100px;
-//     // box-sizing: border-box;
-//     // // transform: translateY(50%);
-//     // opacity: 0;
-//     // // transition: opacity 0.3s, transform 0.5s 0.1s;
-//   }
-//   &__img {
-//     // height: 300px;
-//     // width: 500px;
-//     // width: 100%;
-//   }
-//   &:hover &__infoContainer {
-//     // visibility: visible;
-//     // opacity: 1;
-//     // // display: flex;
-//     // // transform: translateY(0);
-//     // // transition: opacity 0.5s, transform 0.2s;
-//     // // transition: opacity 0.5s 0.3s, transform 0.5s;
-//     // // transform: translateY(0);
-//     // padding: 0 25px 0 25px;
-//     // background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0, transparent);
-//     // // transition: display 2s ease-out;
-//   }
-//   &__lineInfo {
-//     // height: 20px;
-//     // display: flex;
-//     // justify-content: space-between;
-//     // width: 640px;
-//   }
-//   &__tagsContainer {
-//     // list-style: none;
-//     // display: block;
-//     // padding: 0;
-//     // // width: 300px;
-//   }
-//   &__tagItem {
-//     // display: inline;
-//     // &:not(:last-child) .galleryItem__tag {
-//     //   margin-right: 5px;
-//     // }
-//     // &:last-child .galleryItem__tag {
-//     //   margin-right: 0;
-//     // }
-//   }
-//   &__tag {
-//     // background: transparent;
-//     // color: #fff;
-//     // overflow: hidden;
-//     // text-overflow: ellipsis;
-//     // white-space: nowrap;
-//     // word-wrap: break-word;
-//     // max-width: 95px;
-//     // border: none;
-//     // border-radius: 4px;
-//     // &:hover {
-//     //   background-color: rgba(255, 255, 255, 0.3);
-//     // }
-//   }
-
-//   &__like {
-//     // padding-right: 10px;
-//     // background-color: transparent;
-//     // border: none;
-//     // color: #fff;
-//     // display: flex;
-//     // justify-content: center;
-//     // align-items: center;
-//   }
-// }
-
-// .notActive {
-//   // &::before {
-//   //   content: "";
-//   //   background-image: url("../images/galleryItem/noLike.png");
-//   //   display: inline-block;
-//   //   width: 20px;
-//   //   height: 20px;
-//   //   background-size: 20px 20px;
-//   //   margin-right: 5px;
-//   // }
-//   // &:hover::before {
-//   //   background-image: url("../images/galleryItem/like.png");
-//   // }
-// }
-// .active {
-//   // &::before {
-//   //   content: "";
-//   //   background-image: url("../images/galleryItem/like.png");
-//   //   display: inline-block;
-//   //   width: 20px;
-//   //   height: 20px;
-//   //   background-size: 20px 20px;
-//   //   margin-right: 5px;
-//   // }
-// }
+.div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  // height: 200px;
+  display: flex;
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba($color: #138f32, $alpha: 0.3);
+  &Div {
+    margin-top: 30px;
+  }
+}
