--- a/src/imagegallery/gallery.module.scss
+++ b/src/imagegallery/gallery.module.scss
@@ -2,10 +2,11 @@
   padding: 10px 0 10px 0;
   padding: 10px;
   display: flex;
-  //   flex-direction: column;
+  // flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  // position: relative;
 }
 body {
   padding: 0;
