--- a/src/videoGalleryEl/videoGalleryEl.module.scss
+++ b/src/videoGalleryEl/videoGalleryEl.module.scss
@@ -4,9 +4,31 @@
   //   position: fixed;
   //   position: absolute;
 
-  height: 300px;
+  // height: 300px;
+  // background: white;
+  // background-color: red;
+  // position: absolute;
+  height: 100%;
   width: 100%;
-  @media all and (max-width: 600px) {
-    height: 100%;
+  // @media all and (max-width: 600px) {
+  //   height: 100%;
+  // }
+}
+.p {
+  z-index: 15;
+  position: absolute;
+}
+.div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba($color: #138f32, $alpha: 0.4);
+  &Div {
+    margin-top: 30px;
   }
 }
