--- a/src/galleryEl/imageGallery.module.scss
+++ b/src/galleryEl/imageGallery.module.scss
@@ -5,11 +5,17 @@
   align-items: center;
   position: relative;
   min-height: 170px;
-  min-width: 300px;
+  min-width: 400px;
   max-width: 500px;
   margin: 0 10px 10px 0;
+  // padding: 0 30px 0 30px;
+  // box-sizing: border-box;
   @media all and (max-width: 600px) {
     margin-right: 0;
+    margin: 0 0 10px 0;
+  }
+  @media all and (min-width: 601px) {
+    min-height: 250px;
   }
 
   &__infoContainer {
@@ -109,7 +115,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  // height: 200px;
   display: flex;
   color: #fff;
   flex-direction: column;
