--- a/src/videoGallery/videoGallery.module.scss
+++ b/src/videoGallery/videoGallery.module.scss
@@ -1,11 +1,10 @@
 .gallery {
-  padding: 10px 0 10px 0;
+  // padding: 0 30px 0 30px;
   padding: 10px;
+  // box-sizing: border-box;
   display: flex;
-  //   box-sizing: border-box;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  //   padding: 0;
   list-style: none;
 }
