--- a/src/galleryEl/imageGallery.module.scss
+++ b/src/galleryEl/imageGallery.module.scss
@@ -5,19 +5,18 @@
   align-items: center;
   position: relative;
   min-height: 170px;
-  min-width: 400px;
+  min-width: 300px;
   max-width: 500px;
-  margin: 0 10px 10px 0;
-  // padding: 0 30px 0 30px;
-  // box-sizing: border-box;
-  @media all and (max-width: 600px) {
-    margin-right: 0;
-    margin: 0 0 10px 0;
-  }
+  margin: 0 0 10px 0;
   @media all and (min-width: 601px) {
     min-height: 250px;
   }
-
+  @media all and (min-width: 901px) {
+    margin: 0 10px 10px 0;
+    &:nth-child(2n) {
+      margin: 0 0 10px 0;
+    }
+  }
   &__infoContainer {
     position: absolute;
     display: flex;
@@ -47,81 +46,5 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-  }
-  &__tagsContainer {
-    list-style: none;
-    display: block;
-    padding: 0;
-  }
-  &__tagItem {
-    display: inline;
-    &:not(:last-child) .galleryItem__tag {
-      margin-right: 5px;
-    }
-  }
-  &__tag {
-    background: transparent;
-    color: #fff;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    word-wrap: break-word;
-    max-width: 95px;
-    border: none;
-    border-radius: 4px;
-    &:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-    }
-  }
-
-  &__like {
-    padding-right: 10px;
-    background-color: transparent;
-    border: none;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-.notActive {
-  &::before {
-    content: "";
-    background-image: url("../images/galleryItem/noLike.png");
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-size: 20px 20px;
-    margin-right: 5px;
-  }
-  &:hover::before {
-    background-image: url("../images/galleryItem/like.png");
-  }
-}
-.active {
-  &::before {
-    content: "";
-    background-image: url("../images/galleryItem/like.png");
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-size: 20px 20px;
-    margin-right: 5px;
-  }
-}
-
-.div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  color: #fff;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba($color: #138f32, $alpha: 0.3);
-  &Div {
-    margin-top: 30px;
   }
 }
