--- a/src/components/gallery/gallery.module.scss
+++ b/src/components/gallery/gallery.module.scss
@@ -1,10 +1,12 @@
 .gallery {
-  // padding: 0 30px 0 30px;
-  padding: 10px;
-  // box-sizing: border-box;
+  padding: 0 50px 0 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   list-style: none;
+}
+body {
+  padding: 0;
+  margin: 0;
 }
